--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     "require": {
         "php": "^7.2 || ^8.0",
 
-        "symfony/event-dispatcher": "^4.3 || ^5.0",
+        "symfony/event-dispatcher": "^4.3 || ^5.0 || ^6.0",
         "symfony/event-dispatcher-contracts": "^1.1 || ^2.0"
     },
     "autoload": {
         "psr-4": { "SyliusLabs\\Polyfill\\Symfony\\EventDispatcher\\": "src/" }
-    }
+    },
+    "minimum-stability": "beta"
 }
